# ft_printf

./: CMakeLists.txt  Makefile  ft_print_char.c  ft_printf.c  ft_printf.h  main.c
ft_printf_rel_sch/: Makefile  ft_printf.c  test.c  tests_func.c
ft_printf_rel_sch/helper/: ft_check_minus_helper.c  ft_helper_check_u.c  ft_helper_prints.c  ft_print_helpers_str.c  ft_while_print_null_helper.c
ft_printf_rel_sch/include/: ft_helper.h  ft_parser.h  ft_printf.h  libft.h
ft_printf_rel_sch/parser/: ft_itoa_base_ull.c  ft_itoa_base_xu.c  ft_parser.c  ft_parser.h  ft_struct_init.c
ft_printf_rel_sch/processor/: ft_print_char.c  ft_print_d.c  ft_print_p.c  ft_print_percent.c  ft_print_string.c  ft_print_u.c  ft_processor.c
ft_printf_school/: CMakeLists.txt  main.c
ft_printf_school/parser/: compile_parser.sh  ft_parser.c  ft_parser.h
ft_printf_school/processor/: ft_print_d.c  ft_print_u.c  ft_processor.h
helper/: ft_check_minus_helper.c  ft_first_check_d_help.c  ft_helper_check_u.c  ft_print_helpers_str.c
include/: ft_helper.h
libft_home/: ft_memmove.c
parser/: ft_itoa_base_ull.c  ft_itoa_base_xu.c  ft_parser.c  ft_parser.h  ft_struct_init.c
processor/: ft_print_char.c  ft_print_d.c  ft_print_percent.c  ft_print_string.c  ft_print_u.c
save_pf/parser/: a.out  ft_parser.h  ft_struct_init.c
